@@ -3,11 +3,37 @@ plugins {
     id 'idea'
 }
 
+
+
 version 'unspecified'
 
 repositories {
     mavenCentral()
 }
+
+//def moduleName = "org.tpokora.common"
+//compileJava {
+//    inputs.property("moduleName", moduleName)
+//    doFirst {
+//        options.compilerArgs = [
+//                '--module-path', classpath.asPath,
+//        ]
+//        classpath = files()
+//    }
+//}
+//
+//compileTestJava {
+//    inputs.property("moduleName", moduleName)
+//    doFirst {
+//        options.compilerArgs = [
+//                '--module-path', classpath.asPath,
+//                '--add-modules', 'org.junit.jupiter.api',
+//                '--add-reads', "$moduleName=org.junit.jupiter.api",
+//                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+//        ]
+//        classpath = files()
+//    }
+//}
 
 dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-engine:5.5.2"
@@ -17,3 +43,5 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+ext.moduleName = 'org.tpokora.common'
